Bug 121487 - "Expert configuration" not responding to clicks
Summary: "Expert configuration" not responding to clicks
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0.1 target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-18 06:47 UTC by Hussam Al-Tayeb
Modified: 2018-11-20 13:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2018-11-18 06:47:20 UTC
In this build 

Version: 6.3.0.0.alpha0+
Build ID: eb5b353b523ec4d7d6588e2fae5b8b4117bfc2b1
CPU threads: 4; OS: Linux 4.14; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

from https://dev-builds.libreoffice.org/daily/master/Linux-archive-x86_64@80-updater/2018-11-18_02.47.02/LibreOfficeDev_6.3.0.0.alpha0_Linux_x86-64_archive.tar.gz

The "expert configuration" dialog does not respond to mouse clicks.


This works fine in 6.1.3
Comment 1 Adolfo Jayme Barrientos 2018-11-18 13:39:48 UTC
Confirmed on:

Versión: 6.3.0.0.alpha0+
Id. de compilación: eb5b353b523ec4d7d6588e2fae5b8b4117bfc2b1
Subprocs. CPU: 2; SO: Linux 4.18; Repres. IU: predet.; VCL: gtk3; 
Configuración regional: es-MX (es_MX.UTF-8); UI-Language: es-ES
Calc: threaded

… using GNOME Shell.

If I close the underlying Options dialog, the Expert Configuration dialog becomes responsive.
Comment 2 Xisco Faulí 2018-11-19 09:56:07 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=26c375671aa362b2f59d84645784938677ae1719

author	Caolán McNamara <caolanm@redhat.com>	2018-10-04 12:41:22 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-11-01 22:12:33 +0100
commit 26c375671aa362b2f59d84645784938677ae1719 (patch)
tree 5ea3214bf75b3d612a6760597e16ab2cc041ce29
parent d611d5535b818854f9c6c6d4c144c2e5a9155a1a (diff)
weld SwWordCountFloatDlg

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2018-11-19 13:10:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/3853b2dc60d6fa39b66cb7d2e9d14fa37f4f7be7%5E%21

Resolves: tdf#121487 ::Execute called on "modeless" dialog

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-11-19 16:35:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d628e404dedc93077e03e2f513e977bda4452d57%5E%21

Resolves: tdf#121487 ::Execute called on "modeless" dialog

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-11-20 13:30:53 UTC
Verified in

Version: 6.2.0.0.beta1+
Build ID: c13f4d0a2ff503cdebbc789e1711f90e7b5fe379
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, Thanks for fixing this!!