Resolves: tdf#121487 ::Execute called on "modeless" dialog

that isn't really modeless

Change-Id: I9a092622dc45a9a047ef805ed1e41fd9f036a7dc